documents: modify convocation-regionale

--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -25,16 +25,22 @@ sélectionné{{ user|genderize }}
 pour la phase des demi-finales du concours Prologin {{ year|escapetex|nonempty }}.
 
 L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|date:"l d F Y"|escapetex }}
-à partir de 8~h~45 (début des épreuves à 9~heures).
+à partir de 8~h~45 (début des épreuves à 9~heures). Nous vous demandons
+de bien vouloir vous munir d'\textbf{une pièce d'identité} que vous devrez
+téléverser sur notre site afin de vérifier votre éligibilité au concours.
 
 La journée commencera par une épreuve écrite d'algorithmique
 d'une durée de 3~heures. Les épreuves machine (3~h~30) se dérouleront
-l'après-midi à partir de 14~h. La journée se terminera vers 18~h~00 environ.
+l'après-midi à partir de 14~h. La journée se terminera vers 17~h~30 environ.
 
 Pour vous préparer à l'épreuve, nous vous invitons à utiliser le site
 d'entraînement de Prologin~: \url{%
   {{ site_url }}%
 }.
+
+Concernant les entretiens qui ont normalement lieu le matin de l'épreuve,
+ils seront étalés sur plusieurs semaines, les informations seront également
+disponibles sur le site des épreuves régionales.
 
 Important : afin de vous tenir informé.e.s d'éventuels changement d'organisation, nous vous
 conseillons de consulter régulièrement vos e-mails.
