documents: use genderize instead of "écriture inclusive"

--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -42,7 +42,7 @@ Concernant les entretiens qui ont normalement lieu le matin de l'épreuve,
 ils seront étalés sur plusieurs semaines, les informations seront également
 disponibles sur le site des épreuves régionales.
 
-Important : afin de vous tenir informé.e.s d'éventuels changement d'organisation, nous vous
+Important : afin de vous tenir informé{{ user|genderize }} d'éventuels changement d'organisation, nous vous
 conseillons de consulter régulièrement vos e-mails.
 
 Nous restons à votre disposition pour toutes questions, n'hésitez pas
