Added birth date and place to the enrollment form (fiche membre)

--- a/prologin/documents/templates/documents/fiche-adhesion.tex
+++ b/prologin/documents/templates/documents/fiche-adhesion.tex
@@ -11,6 +11,8 @@ Nom : \hrulefill
 
 Prénom : \hrulefill
 
+Date et lieu de naissance : \hrulefill
+
 \section*{Contact}
 
 E-mail : \hrulefill
@@ -64,12 +66,12 @@ trouverait son origine dans l'exploitation de mon image dans le cadre précité.
 \begin{signatureframe}{Date et signature du membre}\end{signatureframe}
 
 \begin{legalrepframe}[title=À remplir par le représentant légal si le membre est mineur]
-Je soussigné(e) \hrulefill
+    Je soussigné(e) \hrulefill
 
-déclare être le parent ou le représentant légal du mineur nommé
-ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
+    déclare être le parent ou le représentant légal du mineur nommé
+    ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
 
-\begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
+    \begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
 \end{legalrepframe}
 
 
