Replaced regular spaces before the ":" with unbreakable spaces

--- a/prologin/documents/templates/documents/fiche-adhesion.tex
+++ b/prologin/documents/templates/documents/fiche-adhesion.tex
@@ -7,34 +7,34 @@
 \begin{document}
 \section*{État civil}
 
-Nom : \hrulefill
+Nom~: \hrulefill
 
-Prénom : \hrulefill
+Prénom~: \hrulefill
 
-Date et lieu de naissance : \hrulefill
+Date et lieu de naissance~: \hrulefill
 
 \section*{Contact}
 
-E-mail : \hrulefill
+E-mail~: \hrulefill
 
-Téléphone : \hrulefill
+Téléphone~: \hrulefill
 
-Adresse : \hrulefill
+Adresse~: \hrulefill
 
 \hrulefill
 
 \section*{Informations supplémentaires}
-Pseudo : \hrulefill
+Pseudo~: \hrulefill
 
-Login IONIS : \hrulefill
+Login IONIS~: \hrulefill
 
-Promotion (école \& année) : \hrulefill
+Promotion (école \& année)~: \hrulefill
 
 \vspace{2cm}
 
 Fait à \hrulefill, le \hrulefill.
 
-Signature :
+Signature~:
 
 \newpage
 
