Added birth date and place to the enrollment form (fiche membre) (#350)
* Added birth date and place to the enrollment form (fiche membre)

* Replaced regular spaces before the ":" with unbreakable spaces

--- a/prologin/documents/templates/documents/fiche-adhesion.tex
+++ b/prologin/documents/templates/documents/fiche-adhesion.tex
@@ -7,32 +7,34 @@
 \begin{document}
 \section*{État civil}
 
-Nom : \hrulefill
+Nom~: \hrulefill
 
-Prénom : \hrulefill
+Prénom~: \hrulefill
+
+Date et lieu de naissance~: \hrulefill
 
 \section*{Contact}
 
-E-mail : \hrulefill
+E-mail~: \hrulefill
 
-Téléphone : \hrulefill
+Téléphone~: \hrulefill
 
-Adresse : \hrulefill
+Adresse~: \hrulefill
 
 \hrulefill
 
 \section*{Informations supplémentaires}
-Pseudo : \hrulefill
+Pseudo~: \hrulefill
 
-Login IONIS : \hrulefill
+Login IONIS~: \hrulefill
 
-Promotion (école \& année) : \hrulefill
+Promotion (école \& année)~: \hrulefill
 
 \vspace{2cm}
 
 Fait à \hrulefill, le \hrulefill.
 
-Signature :
+Signature~:
 
 \newpage
 
@@ -64,12 +66,12 @@ trouverait son origine dans l'exploitation de mon image dans le cadre précité.
 \begin{signatureframe}{Date et signature du membre}\end{signatureframe}
 
 \begin{legalrepframe}[title=À remplir par le représentant légal si le membre est mineur]
-Je soussigné(e) \hrulefill
+    Je soussigné(e) \hrulefill
 
-déclare être le parent ou le représentant légal du mineur nommé
-ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
+    déclare être le parent ou le représentant légal du mineur nommé
+    ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
 
-\begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
+    \begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
 \end{legalrepframe}
 
 
