translations: fix about-privacy-policy

--- a/prologin/locale/en/LC_MESSAGES/django.po
+++ b/prologin/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-13 14:37+0200\n"
+"POT-Creation-Date: 2021-10-13 15:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3260,7 +3260,7 @@ msgid ""
 "\n"
 "#### Purposes\n"
 "\n"
-"The processing goal is to **organize the Prologin contest**.  \n"
+"The processing goal is to **organize the Prologin contest**.\n"
 "It enables the Prologin association to:\n"
 "\n"
 "*   process registration requests on the Prologin website;\n"
@@ -3362,11 +3362,11 @@ msgid ""
 "\n"
 "#### Data Transfers Outside of EU\n"
 "\n"
-"Des transferts de données en dehors de l'Union Européenne peuvent avoir lieu "
-"(vers un partenaire en Suisse pour l'organisation de l'épreuve régionale "
-"correspondante le cas échéant, et vers Google dans le monde entier). Google "
-"et Prologin se reposent sur les clauses contractuelles type prévues par la "
-"Commission Européenne et disponibles sur son site internet.\n"
+"Data may be transferred outside the European Union (to a partner in "
+"Switzerland for the organization of the respective regional event, if "
+"applicable, and to Google worldwide). Google and Prologin rely on the "
+"standard contractual clauses provided by the European Commission and "
+"available on its website.\n"
 "        "
 msgstr ""
 
@@ -3378,7 +3378,7 @@ msgstr ""
 msgid ""
 "\n"
 "Identification data, school, and personal life are stored until the data "
-"subject unsubscribes from Prologin.  \n"
+"subject unsubscribes from Prologin.\n"
 "Health data are deleted three years after the end of the final.\n"
 "        "
 msgstr ""
