--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -28,7 +28,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-13 12:33+0200\n"
+"POT-Creation-Date: 2021-10-13 15:17+0200\n"
 "PO-Revision-Date: 2020-05-10 18:14+0000\n"
 "Last-Translator: Valentin Seux <valentin.seux@prologin.org>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/"
@@ -3623,11 +3623,33 @@ msgid "About the Processing"
 msgstr "Objet du traitement de données"
 
 #: pages/templates/pages/about-privacy-policy.html:22
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "#### Purposes\n"
+#| "\n"
+#| "The processing goal is to **organize the Prologin contest**.  \n"
+#| "It enables the Prologin association to:\n"
+#| "\n"
+#| "*   process registration requests on the Prologin website;\n"
+#| "*   provide communication services (forum) and code evaluation (online "
+#| "judge) ;\n"
+#| "*   process applications for participation in the Prologin contest;\n"
+#| "*   tailor the meals taking into account each dietary restrictions;\n"
+#| "*   answer questions from the participants;\n"
+#| "*   steer the activity of the association (evaluate participant "
+#| "satisfaction, produce statistics).\n"
+#| "\n"
+#| "#### Lawfulness of Processing\n"
+#| "\n"
+#| "The data subjects give consent to the processing of their personal data "
+#| "for the declared purposes (art. 6(1)a of GDPR).\n"
+#| "        "
 msgid ""
 "\n"
 "#### Purposes\n"
 "\n"
-"The processing goal is to **organize the Prologin contest**.  \n"
+"The processing goal is to **organize the Prologin contest**.\n"
 "It enables the Prologin association to:\n"
 "\n"
 "*   process registration requests on the Prologin website;\n"
@@ -3786,6 +3808,27 @@ msgid "Data Recipients"
 msgstr "Destinataires des données"
 
 #: pages/templates/pages/about-privacy-policy.html:99
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "#### Categories of Recipients\n"
+#| "\n"
+#| "Taking into account their respective needs, the following are a recipient "
+#| "of all or any parts of the data:\n"
+#| "\n"
+#| "*   authorized members of Prologin;\n"
+#| "*   authorized members of Prologin partners and/or sub-contractors;\n"
+#| "*   emergency services if needed.\n"
+#| "\n"
+#| "#### Data Transfers Outside of EU\n"
+#| "\n"
+#| "Des transferts de données en dehors de l'Union Européenne peuvent avoir "
+#| "lieu (vers un partenaire en Suisse pour l'organisation de l'épreuve "
+#| "régionale correspondante le cas échéant, et vers Google dans le monde "
+#| "entier). Google et Prologin se reposent sur les clauses contractuelles "
+#| "type prévues par la Commission Européenne et disponibles sur son site "
+#| "internet.\n"
+#| "        "
 msgid ""
 "\n"
 "#### Categories of Recipients\n"
@@ -3799,11 +3842,11 @@ msgid ""
 "\n"
 "#### Data Transfers Outside of EU\n"
 "\n"
-"Des transferts de données en dehors de l'Union Européenne peuvent avoir lieu "
-"(vers un partenaire en Suisse pour l'organisation de l'épreuve régionale "
-"correspondante le cas échéant, et vers Google dans le monde entier). Google "
-"et Prologin se reposent sur les clauses contractuelles type prévues par la "
-"Commission Européenne et disponibles sur son site internet.\n"
+"Data may be transferred outside the European Union (to a partner in "
+"Switzerland for the organization of the respective regional event, if "
+"applicable, and to Google worldwide). Google and Prologin rely on the "
+"standard contractual clauses provided by the European Commission and "
+"available on its website.\n"
 "        "
 msgstr ""
 "\n"
@@ -3828,10 +3871,17 @@ msgid "Storage Period"
 msgstr "Durée de conservation"
 
 #: pages/templates/pages/about-privacy-policy.html:119
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "Identification data, school, and personal life are stored until the data "
+#| "subject unsubscribes from Prologin.  \n"
+#| "Health data are deleted three years after the end of the final.\n"
+#| "        "
 msgid ""
 "\n"
 "Identification data, school, and personal life are stored until the data "
-"subject unsubscribes from Prologin.  \n"
+"subject unsubscribes from Prologin.\n"
 "Health data are deleted three years after the end of the final.\n"
 "        "
 msgstr ""
