documents: fix finale documents compilation

--- a/prologin/documents/templates/documents/stub-preamble.tex
+++ b/prologin/documents/templates/documents/stub-preamble.tex
@@ -24,7 +24,7 @@
   }
 }%
 \makeatother
-\usepackage[pdftex]{hyperref}
+%\usepackage[pdftex]{hyperref}
 \hypersetup{pdftitle={%
 {{ pdf_title }}%
 },pdfauthor={Prologin}}
