documents: update templates
Co-authored-by: Valérian Fayt <valerian.fayt@prologin.org>
Co-authored-by: Mélanie Tchéou <melanie.tcheou@prologin.org>
Co-authored-by: Léo Portemont <leo.portemont@prologin.org>

--- a/prologin/documents/templates/documents/autorisation-participation.tex
+++ b/prologin/documents/templates/documents/autorisation-participation.tex
@@ -27,7 +27,7 @@ Code postal \hrulefill{} Ville \hrulefill\hrulefill\hrulefill{} Pays \hrulefill\
 certifie être le représentant légal de \hrulefill
 
 et l'autorise à participer à la finale du concours national d'informatique Prologin se déroulant
-du {{ event.date_begin|date:"l d F"|escapetex }} au {{ event.date_end|date:"l d F Y"|escapetex }} à :
+du {{ event.date_begin|date:"l d F"|lower|escapetex }} au {{ event.date_end|date:"l d F Y"|lower|escapetex }} à :
 
 \begin{center}
     \textbf{EPITA}\\
@@ -35,8 +35,8 @@ du {{ event.date_begin|date:"l d F"|escapetex }} au {{ event.date_end|date:"l d 
     \textbf{94270 Le Kremlin-Bicêtre}
 \end{center}
 
-\checkbox J'autorise\hspace{1em} \checkbox Je n'autorise pas\hspace{1em}
-le candidat susnommé à quitter l'établissement avant la fin de l'événement.
+\checkbox J'autorise\hspace{1em} \checkbox Je n'autorise pas\hspace{1em} le
+candidat susnommé à quitter l'établissement seul avant la fin de l'événement.
 
 \begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
 
