--- a/prologin/documents/templates/documents/decharge-materiel.tex
+++ b/prologin/documents/templates/documents/decharge-materiel.tex
@@ -14,10 +14,10 @@ vol ou détérioration.
 
 Nous vous \textbf{déconseillons très fortement} d'emmener, entre autres :
 \begin{itemize}
-\item ordinateur portable ;
-\item appareil photo, vidéo numérique ;
-\item console de jeux ;
-\item argent liquide, carte bleue, chéquier.
+\item ordinateur portable ou fixe, disque dur, carte graphique externe, station de minage, borne Wi-Fi ;
+\item appareil photo, caméra, caméscope, walkman, imprimante, 3310 ;
+\item console de jeux, borne d'arcade, flipper ;
+\item argent liquide, carte bleue (ou rose, jaune, grise, verte, etc.), chéquier, or pur, bitcoin.
 \end{itemize}\vspace{2mm}
 
 \begin{signatureframe}{Date et signature du candidat}\end{signatureframe}
