--- a/prologin/documents/templates/documents/droit-image-finale.tex
+++ b/prologin/documents/templates/documents/droit-image-finale.tex
@@ -14,8 +14,8 @@ Code postal \hrulefill{} Ville \hrulefill\hrulefill\hrulefill{} Pays \hrulefill
 
 autorise l'association Prologin à me photographier et me filmer dans
 le cadre de la finale du Concours National d'Informatique qui se tiendra du
-{{ event.date_begin|date:"l d F"|escapetex }} au
-{{ event.date_end|date:"l d F Y"|escapetex }} à {{ event.center.city|title }}.
+{{ event.date_begin|date:"l d F"|lower|escapetex }} au
+{{ event.date_end|date:"l d F Y"|lower|escapetex }} à {{ event.center.city|title }}.
 
 J'accepte l'utilisation et l'exploitation non commerciale de mon
 image dans le cadre de la promotion du concours, notamment sur le site internet
