--- a/prologin/documents/templates/documents/personnes-a-prevenir.tex
+++ b/prologin/documents/templates/documents/personnes-a-prevenir.tex
@@ -26,7 +26,7 @@ Deuxième personne à contacter en cas d'urgence :
     \item Tél. \hrulefill
 \end{itemize}\vspace\baselineskip
 
-Listez vos allergies alimentaires et médicales :
+Listez allergies alimentaires et médicales du candidat :
 
 \hrulefill
 
