--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -42,7 +42,7 @@ pour la finale du concours Prologin {{ year }}, qui se déroulera à~:
 L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|add_days:1|date:"l d F Y"|escapetex }}
 à 9~h~00. Le concours, d'une durée de 36~heures, prendra fin avec le banquet du
 {{ event.date_end|date:"l"|escapetex }} midi. Vous serez donc libre à partir de 15~h~00. Notez que la
-programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#,
+programmation se fera obligatoirement en C, C++, Java, JS, Python, PHP, C\#,
  Rust ou OCaml. Nous vous demandons de bien vouloir vous munir d'\textbf{une
 pièce d'identité et de cette convocation, ainsi que de tous les documents
 ci-joints dûment remplis}. Attention, sans ces documents, nous ne pourrons pas
@@ -71,8 +71,8 @@ dont vous aurez besoin~:
 
 \vspace{0.5cm}
 
-Nous restons à votre disposition pour toutes questions, n'hésitez pas
-à nous contacter.
+Nous restons à votre disposition pour toute question, n'hésitez pas
+à nous contacter à \href{concours@prologin.org}.
 
 \signature
 \newpage
