fix(documents): various template fixes

--- a/prologin/documents/templates/documents/autorisation-participation.tex
+++ b/prologin/documents/templates/documents/autorisation-participation.tex
@@ -30,7 +30,7 @@ et l'autorise à participer à la finale du concours national d'informatique Pro
 du {{ event.date_begin|date:"l d F"|lower|escapetex }} au {{ event.date_end|date:"l d F Y"|lower|escapetex }} à :
 
 \begin{center}
-    \textbf{EPITA}\\
+    \textbf{Écoles EPITA-EPITECH}\\
     \textbf{24 rue Pasteur}\\
     \textbf{94270 Le Kremlin-Bicêtre}
 \end{center}
