--- a/prologin/documents/templates/documents/planning.tex
+++ b/prologin/documents/templates/documents/planning.tex
@@ -13,7 +13,7 @@
     \item 20 h 00                 Dîner
     \item 21 h 30                 Activités au choix :
     \begin{itemize}
-	\item[~]            Cours d'initiation à GNU/Linux
+	\item[~]            Activités Diverses
 	\item[~]            Projection de films
 	\item[~]            Jeux
     \end{itemize}
