--- a/prologin/documents/templates/documents/stub-preamble.tex
+++ b/prologin/documents/templates/documents/stub-preamble.tex
@@ -25,6 +25,6 @@
 }%
 \makeatother
 %\usepackage[pdftex]{hyperref}
-\hypersetup{pdftitle={%
-{{ pdf_title }}%
-},pdfauthor={Prologin}}
+%\hypersetup{pdftitle={%
+%{{ pdf_title }}%
+%},pdfauthor={Prologin}}
