--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -6145,10 +6145,10 @@ msgstr ""
 
 #: users/forms.py:113
 msgid ""
-"Please check the box above and complete the additional tasks if any. This is "
+"Please enter the text above and complete the additional tasks if any. This is "
 "required to fight spamming bots on the website."
 msgstr ""
-"Veuillez cocher la case ci-dessus et réaliser les éventuelles opérations "
+"Veuillez entrer le texte ci-dessus et réaliser les éventuelles opérations "
 "supplémentaires. Cela permet de se prémunir des robots."
 
 #: users/forms.py:129
