feat(documents): fix latex error convocation finale
Signed-off-by: Paul Dufour <paul.dufour@prologin.org>

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -72,7 +72,7 @@ dont vous aurez besoin~:
 \vspace{0.5cm}
 
 Nous restons à votre disposition pour toute question, n'hésitez pas
-à nous contacter à \href{concours@prologin.org}.
+à nous contacter à \url{concours@prologin.org}.
 
 \signature
 \newpage
