fix: event: typo in date_begin
Signed-off-by: Paul Dufour <paul.dufour@prologin.org>

--- a/prologin/documents/templates/documents/droit-image-regionale.tex
+++ b/prologin/documents/templates/documents/droit-image-regionale.tex
@@ -26,7 +26,7 @@ tiendront :
 
 \small
 \begin{itemize}
-    \item le {{ event.begin_date|date:"l d F Y"|escapetex }} à : {{ center.city|escapetex|nonempty}}.
+    \item le {{ event.date_begin|date:"l d F Y"|escapetex }} à : {{ center.city|escapetex|nonempty}}.
 \end{itemize}
 \normalsize
 
